# subwritle

./: .gitignore  README.md  pyproject.toml
subwritle/: __init__.py  __main__.py  processor.py
