[tool.poetry]
name = "subwritle"
version = "0.1.0"
description = "Easily turn subtitle files into readable text files."
authors = ["king-millez <Millez.Dev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
srt = "^3.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
